# starinput

./: CMakeLists.txt
include/: StarInput.h  StarInputListener.h  StarMouse.h  StarMouseInterface.h  StarMouseListener.h  StarMouseSDL.h
include/StarInput/: StarInput.h  StarInputDI8.h  StarKeyboardListener.h  StarMouse.h  StarMouseDI8.h  StarMouseEvent.h  StarMouseInterface.h  StarMouseListener.h  StarMouseSDL.h
src/: CMakeLists.txt  StarInput.cpp  StarInput.cxx  StarInputDI8.cpp  StarMouse.cpp  StarMouseDI8.cpp
